# hjmcpsse

./: AZURE_AI_SETUP.md  README.md  TESTING.md  azure_ai_integration.py  configure_azure.py  mcp_client.py  mcp_config.json  pyproject.toml  requirements.txt  test_azure_openai_deployment.py  test_client.py  test_endpoint.py
src/hjmcpsse/: __init__.py  __main__.py  server.py
src/hjmcpsse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hjmcpsse/prompts/: __init__.py  code_generator.py
src/hjmcpsse/resources/: __init__.py  filesystem.py
src/hjmcpsse/tools/: __init__.py  calculator.py
