[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hjmcpsse"
version = "0.1.0"
description = "MCP server with SSE transport"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "hjmcpsse", email = "hjmcpsse@example.com" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx-sse>=0.4.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.100.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
hjmcpsse = "hjmcpsse.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
